<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_username_label">User name</string>
    <string name="login_password_label">Password</string>
    
    <string name="usage_instructions_label">Here\'s how to scan for the baby</string>
    <string name="ideal_image_label">Take a photo that looks like this</string>
    <string name="metadata_image_preview_label">image label</string><string name="metadata_patient_first_name_label">First name</string><string name="metadata_patient_last_name_label">Last name</string>
    <string-array name="metadata_sex_label_spinner">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="metadata_sex_label">Sex</string>
    <string name="metadata_dob_label">Date of Birth</string><string name="metadata_health_id_label">Health ID</string>
    <string name="metadata_gps_coordinates_label">GPS Coordinates</string><string name="metadata_address_label">Address</string><string name="metadata_phone_number_label">Phone Number</string><string name="metadata_email_label">Email</string><string name="metadata_patient_id_label">Patient ID</string><string name="metadata_comments_label">Comments</string>

    <string name="image_success">Image sent!</string>
    
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="app_name">Ultra Remote Medicine</string>
    
    <string name="metadata_patient_priority_label">Priority</string>
    
    
    
    
    
    
    
    
    
    

</resources>