<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    >
    
    <LinearLayout
    android:layout_width="@dimen/textview_length"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
   			android:layout_gravity="center_horizontal"
	        android:textColor="@color/label_color"
	        android:text="@string/ideal_image_label"
	    />
	    
	    <ImageView
	        android:layout_width="@dimen/video_width"
	        android:layout_height="@dimen/video_height"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="30dp"
	        android:contentDescription="@string/ideal_image_label"
	        android:src="@drawable/ideal_image" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
   			android:layout_marginBottom="4dp"
   			android:layout_gravity="center_horizontal"
	        android:textColor="@color/label_color"
	        android:text="@string/usage_instructions_label"
	    />
	    
	    <VideoView
	        android:id="@+id/tutorial_video_view"
	        android:layout_width="@dimen/video_width"
	        android:layout_height="@dimen/video_height"
   			android:layout_gravity="center_horizontal"
	    />
	    
    	<Button
    	    android:id="@+id/end_walkthrough" 
    	    android:text="@string/next"
	        android:textColor="@color/button_text_color"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:layout_gravity="right"
   			android:layout_marginTop="30dp"
   			android:layout_marginRight="5dp"
   			android:background="@drawable/next" />
    
	</LinearLayout>    
</LinearLayout>